--- a/app/src/main/res/layout/authentication_error_bottomsheet.xml
+++ b/app/src/main/res/layout/authentication_error_bottomsheet.xml
@@ -2,52 +2,66 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:background="@drawable/authentication_bottomsheet_card"
     >
-
 
   <TextView
       android:id="@+id/title_authentication_error"
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:text="AuthenticationFailed"
-      app:layout_constraintBottom_toTopOf="@+id/authentication_error_message"
+      android:layout_marginStart="26dp"
+      android:layout_marginTop="36dp"
+      android:layout_marginEnd="26dp"
+      android:fontFamily="sans-serif-medium"
+      android:text="Authentication Failed"
+      android:textColor="#212121"
+      android:textSize="20sp"
+      android:textStyle="normal"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      android:layout_marginTop="20dp"
-      android:layout_marginStart="30dp"
-      android:textSize="20dp"
-      style="@style/TextAppearance.AppCompat"
-      app:layout_constraintVertical_chainStyle="packed"
-      app:layout_constraintHorizontal_chainStyle="packed"
-
       />
+
   <TextView
       android:id="@+id/authentication_error_message"
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:layout_marginStart="26dp"
+      android:layout_marginTop="9dp"
+      android:layout_marginEnd="26dp"
+      android:fontFamily="sans-serif-medium"
       android:text="Error, try again!"
-      app:layout_constraintBottom_toTopOf="@+id/retry_authentication"
+      android:textColor="#939294"
+      android:textSize="16sp"
+      android:textStyle="normal"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/title_authentication_error"
-      android:layout_marginBottom="50dp"
-      android:layout_marginStart="30dp"
       />
 
   <Button
       android:id="@+id/retry_authentication"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Retry"
-      style="@style/ButtonStyle"
+      android:layout_width="match_parent"
+      android:layout_height="36dp"
+      android:layout_marginStart="26dp"
+      android:layout_marginTop="36dp"
+      android:layout_marginEnd="26dp"
+      android:layout_marginBottom="32dp"
+      android:background="@drawable/button_background"
+      android:fontFamily="sans-serif-medium"
+      android:letterSpacing="0.09"
+      android:lineSpacingExtra="2sp"
+      android:paddingTop="10dp"
+      android:paddingBottom="10dp"
+      android:text="Got it!"
+      android:textColor="@color/white"
+      android:textSize="14sp"
+      android:textStyle="normal"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:layout_marginBottom="20dp"
+      app:layout_constraintTop_toBottomOf="@id/authentication_error_message"
       />
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
