--- a/app/src/main/res/layout/authentication_prompt_activity.xml
+++ b/app/src/main/res/layout/authentication_prompt_activity.xml
@@ -3,5 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-
+  <FrameLayout
+      android:id="@+id/bottom_sheet_error_fragment_container"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:elevation="8dp"
+      />
 </androidx.constraintlayout.widget.ConstraintLayout>
