--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -18,16 +18,11 @@
       android:title="@string/permissions_title" />
 
   <Preference
-      android:icon="@drawable/ic_settings_fingerprint"
-      android:key="pref_fingerprint"
-      android:layout="@layout/preference_without_summary_layout"
-      android:title="Fingerprint" />
-
-  <Preference
       android:icon="@drawable/ic_settings_redeem"
       android:key="pref_redeem"
       android:layout="@layout/preference_without_summary_layout"
       android:title="@string/title_redeem" />
+
   <Preference
       android:icon="@drawable/ic_backup_black"
       android:key="pref_backup"
@@ -38,6 +33,14 @@
       android:key="pref_restore"
       android:layout="@layout/preference_without_summary_layout"
       android:title="@string/import_wallet_title" />
+
+  <Preference
+      android:id="@+id/fingerprint_preference"
+      android:icon="@drawable/ic_settings_fingerprint"
+      android:key="pref_fingerprint"
+      android:layout="@layout/preference_without_summary_layout"
+      android:title="Fingerprint" />
+
   <PreferenceCategory
       android:key="pref_opensource_links"
       android:layout="@layout/preference_category_layout"
