--- a/app/src/main/res/layout-land/fragment_carrier_confirm.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_confirm.xml
@@ -31,59 +31,61 @@
       app:layout_constraintTop_toBottomOf="@id/top_separator"
       >
 
-    <TextView
-        android:id="@+id/title"
-        style="@style/PaymentMethods.CarrierBilling.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/carrier_billing_insert_phone_body"
-        app:layout_constraintBottom_toTopOf="@id/disclaimer"
-        app:layout_constraintLeft_toLeftOf="parent"
+    <ImageView
+        android:id="@+id/carrier_image"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toTopOf="@+id/fee_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         />
 
     <TextView
-        android:id="@+id/disclaimer"
-        style="@style/PaymentMethods.CarrierBilling.Description"
-        android:layout_width="wrap_content"
+        android:id="@+id/fee_title"
+        style="@style/PaymentMethods.CarrierBilling.Title"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="@string/carrier_billing_fees_disclaimer"
-        app:layout_constraintBottom_toTopOf="@id/phone_number_layout"
-        app:layout_constraintLeft_toLeftOf="@id/title"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-
-        />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/content_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="title, disclaimer, phone_number_layout"
-        />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/phone_number_layout"
-        style="@style/BillingTextInputLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="@string/carrier_billing_phone_field"
+        android:layout_marginTop="25dp"
+        android:text="@string/carrier_billing_carrier_fees_body"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/carrier_image"
+        />
+
+    <TextView
+        android:id="@+id/fiat_price_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="@color/dialog_buy_fiat_value"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@id/appc_price_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/title"
-        app:layout_constraintTop_toBottomOf="@+id/disclaimer"
-        >
-      <com.google.android.material.textfield.TextInputEditText
-          android:id="@+id/phone_number"
-          android:layout_width="match_parent"
-          android:layout_height="48dp"
-          android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-          android:maxLines="1"
-          android:textSize="14sp"
-          tools:text="912345678"
-          />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toTopOf="@id/fee_title"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="0,99 EUR"
+        />
+
+    <TextView
+        android:id="@+id/appc_price_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/dialog_secondary_price"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/fee_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fiat_price_text"
+        tools:text="0,09 APPC"
+        />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -122,7 +124,7 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/big_margin"
       android:layout_marginEnd="@dimen/big_margin"
-      app:layout_constraintBottom_toTopOf="@+id/bottom_separator"
+      app:layout_constraintBottom_toTopOf="@id/bottom_separator"
       app:layout_constraintEnd_toEndOf="@id/mid_guideline"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/payment_methods_header"
