--- a/app/src/main/res/layout/layout_no_subscriptions.xml
+++ b/app/src/main/res/layout/layout_no_subscriptions.xml
@@ -1,57 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
-  <com.airbnb.lottie.LottieAnimationView
-      android:id="@+id/no_subscriptions_animation"
-      android:layout_width="160dp"
-      android:layout_height="160dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:lottie_autoPlay="true"
-      app:lottie_enableMergePathsForKitKatAndAbove="true"
-      app:lottie_loop="true"
-      app:lottie_rawRes="@raw/no_subscritions"
-      />
-
-  <TextView
-      android:id="@+id/no_subscriptions_title"
-      android:layout_width="0dp"
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/big_margin"
-      android:layout_marginTop="27dp"
-      android:layout_marginEnd="@dimen/big_margin"
-      android:fontFamily="sans-serif"
-      android:gravity="center"
-      android:lineSpacingExtra="4sp"
-      android:text="@string/subscriptions_empty_title"
-      android:textColor="@color/transaction_item_text_color"
-      android:textSize="16sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/no_subscriptions_animation"
-      />
+      android:paddingTop="16dp"
+      android:paddingBottom="16dp"
+      >
 
-  <TextView
-      android:id="@+id/no_subscriptions_message"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/big_margin"
-      android:layout_marginTop="11dp"
-      android:layout_marginEnd="@dimen/big_margin"
-      android:fontFamily="sans-serif"
-      android:gravity="center"
-      android:lineSpacingExtra="4sp"
-      android:text="@string/subscriptions_empty_body"
-      android:textColor="@color/grey_8a_alpha"
-      android:textSize="12sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/no_subscriptions_title"
-      />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/no_subscriptions_animation"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_enableMergePathsForKitKatAndAbove="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/no_subscritions"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/no_subscriptions_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/big_margin"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="@dimen/big_margin"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:lineSpacingExtra="4sp"
+        android:text="@string/subscriptions_empty_title"
+        android:textColor="@color/transaction_item_text_color"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/no_subscriptions_animation"
+        />
+
+    <TextView
+        android:id="@+id/no_subscriptions_message"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/big_margin"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="@dimen/big_margin"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:lineSpacingExtra="4sp"
+        android:text="@string/subscriptions_empty_body"
+        android:textColor="@color/grey_8a_alpha"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/no_subscriptions_title"
+        />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
