--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -54,7 +54,8 @@
       android:id="@+id/refresh_layout"
       android:layout_width="match_parent"
       android:layout_height="0dp"
-      app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+      android:layout_marginBottom="57dp"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toBottomOf="@id/collapsable_bar"
       >
 
@@ -78,9 +79,10 @@
       android:id="@+id/system_view"
       android:layout_width="0dp"
       android:layout_height="0dp"
+      android:layout_marginBottom="57dp"
       android:background="@color/activity_background_color"
       android:visibility="invisible"
-      app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/collapsable_bar"
@@ -194,12 +196,13 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
-  <FrameLayout
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/top_up_wrapper"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
       >
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/top_up_btn"
@@ -217,22 +220,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:rippleColor="#00ffffff"
         />
-  </FrameLayout>
-
-  <com.google.android.material.bottomnavigation.BottomNavigationView
-      android:id="@+id/bottom_navigation"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="?android:attr/windowBackground"
-      app:itemIconTint="@color/gray_alpha_8a"
-      app:itemRippleColor="@color/button_borderless_ripple_color"
-      app:itemTextColor="@color/gray_alpha_8a"
-      app:labelVisibilityMode="labeled"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:menu="@menu/bottom_navigation_menu"
-      />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="?android:attr/windowBackground"
+        app:itemIconTint="@color/gray_alpha_8a"
+        app:itemRippleColor="@color/button_borderless_ripple_color"
+        app:itemTextColor="@color/gray_alpha_8a"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_menu"
+        />
+  </androidx.constraintlayout.widget.ConstraintLayout>
 
   <FrameLayout
       android:id="@+id/faded_background"
@@ -240,6 +243,7 @@
       android:layout_height="0dp"
       android:background="@color/faded_background_color"
       android:clickable="true"
+      android:elevation="8dp"
       android:focusable="true"
       android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
