--- a/app/src/main/res/layout/fingerprint_tooltip.xml
+++ b/app/src/main/res/layout/fingerprint_tooltip.xml
@@ -71,16 +71,15 @@
       android:layout_marginEnd="8dp"
       android:elevation="1dp"
       android:src="@drawable/ic_tooltip_arrow_up"
-      app:layout_constraintBottom_toTopOf="@id/fingerprint_tooltip"
       app:layout_constraintEnd_toEndOf="@id/fingerprint_tooltip"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/icon"
       />
   <ImageView
+      android:id="@+id/icon"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="10dp"
       android:src="@drawable/ic_settings_white_24dp"
-      app:layout_constraintBottom_toTopOf="@id/arrow_up_tip"
       app:layout_constraintEnd_toEndOf="@id/arrow_up_tip"
       app:layout_constraintStart_toStartOf="@id/arrow_up_tip"
       app:layout_constraintTop_toTopOf="parent"
