--- a/app/src/main/res/xml/activity_transactions_scene.xml
+++ b/app/src/main/res/xml/activity_transactions_scene.xml
@@ -4,14 +4,14 @@
 
   <Transition
       android:id="@+id/toolbar_transition"
-      app:constraintSetStart="@id/expanded"
       app:constraintSetEnd="@+id/collapsed"
+      app:constraintSetStart="@id/expanded"
       app:layoutDuringTransition="honorRequest">
     <OnSwipe
         app:dragDirection="dragUp"
+        app:moveWhenScrollAtTop="true"
         app:touchAnchorId="@id/refresh_layout"
-        app:touchAnchorSide="top"
-        app:moveWhenScrollAtTop="true" />
+        app:touchAnchorSide="top" />
     <KeyFrameSet>
       <KeyAttribute
           android:alpha="1"
@@ -40,10 +40,10 @@
           app:motionTarget="@id/balance_subtitle" />
       <KeyPosition
           app:drawPath="pathRelative"
-          app:percentX="1"
-          app:percentY="1"
           app:framePosition="50"
-          app:motionTarget="@id/balance" />
+          app:motionTarget="@id/balance"
+          app:percentX="1"
+          app:percentY="1" />
       <KeyAttribute
           android:scaleX="0.75"
           android:scaleY="0.75"
@@ -63,15 +63,15 @@
         app:layout_constraintTop_toTopOf="parent" />
     <Constraint
         android:id="@+id/balance"
+        style="@style/ToolbarTextAppearance.Title.Expanded"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="77dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        style="@style/ToolbarTextAppearance.Title.Expanded"
         android:scaleX="1.0"
-        android:scaleY="1.0" />
+        android:scaleY="1.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Constraint android:id="@+id/system_view">
       <PropertySet
           app:applyMotionScene="false"
@@ -89,13 +89,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="124dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingStart="15dp"
-        android:paddingEnd="15dp" />
+        android:paddingEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Constraint
         android:id="@+id/balance_skeleton"
@@ -112,9 +112,15 @@
         android:id="@+id/top_up_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:visibilityMode="ignore" />
+    <Constraint android:id="@+id/faded_background">
+      <PropertySet
+          app:applyMotionScene="false"
+          app:visibilityMode="ignore" />
+    </Constraint>
   </ConstraintSet>
 
   <ConstraintSet android:id="@+id/collapsed">
@@ -122,26 +128,27 @@
         android:id="@+id/top_up_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:visibilityMode="ignore" />
     <Constraint
         android:id="@+id/collapsable_bar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Constraint
         android:id="@+id/balance"
+        style="@style/ToolbarTextAppearance.Title.Expanded"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"
-        app:layout_constraintTop_toTopOf="@id/toolbar"
-        style="@style/ToolbarTextAppearance.Title.Expanded"
         android:scaleX="0.75"
-        android:scaleY="0.75" />
+        android:scaleY="0.75"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/toolbar" />
 
     <Constraint android:id="@+id/system_view">
       <PropertySet
@@ -160,13 +167,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingStart="15dp"
-        android:paddingEnd="15dp"></Constraint>
+        android:paddingEnd="15dp"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Constraint
         android:id="@+id/balance_skeleton"
@@ -179,6 +186,12 @@
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/balance_skeleton"
         app:visibilityMode="ignore" />
+
+    <Constraint android:id="@+id/faded_background">
+      <PropertySet
+          app:applyMotionScene="false"
+          app:visibilityMode="ignore" />
+    </Constraint>
   </ConstraintSet>
 
 </MotionScene>
