--- a/app/src/main/res/xml/activity_transactions_scene_short.xml
+++ b/app/src/main/res/xml/activity_transactions_scene_short.xml
@@ -4,14 +4,14 @@
 
   <Transition
       android:id="@+id/toolbar_transition"
-      app:constraintSetStart="@id/expanded"
       app:constraintSetEnd="@+id/collapsed"
+      app:constraintSetStart="@id/expanded"
       app:layoutDuringTransition="honorRequest">
     <OnSwipe
         app:dragDirection="dragUp"
+        app:moveWhenScrollAtTop="true"
         app:touchAnchorId="@id/refresh_layout"
-        app:touchAnchorSide="top"
-        app:moveWhenScrollAtTop="true" />
+        app:touchAnchorSide="top" />
     <KeyFrameSet>
       <KeyAttribute
           android:alpha="1"
@@ -52,15 +52,15 @@
         app:layout_constraintTop_toTopOf="parent" />
     <Constraint
         android:id="@+id/balance"
+        style="@style/ToolbarTextAppearance.Title.Expanded"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="77dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        style="@style/ToolbarTextAppearance.Title.Expanded"
         android:scaleX="1.0"
-        android:scaleY="1.0" />
+        android:scaleY="1.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Constraint android:id="@+id/system_view">
       <PropertySet
@@ -80,13 +80,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="124dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingStart="15dp"
-        android:paddingEnd="15dp" />
+        android:paddingEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Constraint
         android:id="@+id/balance_skeleton"
@@ -99,6 +99,11 @@
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/balance_skeleton"
         app:visibilityMode="ignore" />
+    <Constraint android:id="@+id/faded_background">
+      <PropertySet
+          app:applyMotionScene="false"
+          app:visibilityMode="ignore" />
+    </Constraint>
   </ConstraintSet>
 
   <ConstraintSet android:id="@+id/collapsed">
@@ -106,19 +111,19 @@
         android:id="@+id/collapsable_bar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Constraint
         android:id="@+id/balance"
+        style="@style/ToolbarTextAppearance.Title.Expanded"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"
-        app:layout_constraintTop_toTopOf="@id/toolbar"
-        style="@style/ToolbarTextAppearance.Title.Expanded"
         android:scaleX="0.75"
-        android:scaleY="0.75" />
+        android:scaleY="0.75"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/toolbar" />
     <Constraint android:id="@+id/system_view">
       <PropertySet
           app:applyMotionScene="false"
@@ -137,13 +142,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingStart="15dp"
-        android:paddingEnd="15dp" />
+        android:paddingEnd="15dp"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Constraint
         android:id="@+id/balance_skeleton"
@@ -156,6 +161,12 @@
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/balance_skeleton"
         app:visibilityMode="ignore" />
+
+    <Constraint android:id="@+id/faded_background">
+      <PropertySet
+          app:applyMotionScene="false"
+          app:visibilityMode="ignore" />
+    </Constraint>
   </ConstraintSet>
 
 </MotionScene>
